--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,9 @@
     "places",
     "autocomplete",
     "google-places",
-    "web-components"
+    "web-components",
+    "geocode",
+    "reverse-geocode"
   ],
   "license": "MIT",
   "dependencies": {
@@ -23,5 +25,5 @@
     "highlightjs": "^9.5.0",
     "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0"
   },
-  "version": "1.0.3"
+  "version": "1.1.0"
 }
